@@ -1,3 +1,15 @@
+2005-01-18  Murray Cumming  <murrayc@murrayc.com>
+ 
+	* demos/demowindow.cc: #ifdef on __SUNPRO_CC instead of 
+	GLIBMM_COMPILER_SUN_FORTE, though we should really find out why 
+	GLIBMM_COMPILER_SUN_FORTE is not defined with the SUN compiler.
+	* demos/example_stockbrowser.cc: Remove some consts that the 
+	SUN compiler does not allow.
+	* gtk/src/radiobutton.hg: Remove duplicate Group typedef, which 
+        SUN Forte complains about.
+        * This should fix the remaining issues in bug #154973.
+	Joel Fredrikson helped with these fixes.
+
 2005-01-11  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/custom/custom_widget/mywidget.cc: Fix from Marco 
